# personal-website-2022

./: '  .env  .gitignore  .swcrc  README.md  TestingThree.js  TestingThree.js.map  bsconfig.json  bun.lockb  graphql_schema.json  index.html  nodemon.json  package.json  update_schema.sh  vite.config.js  vite.config.ts
.graphql_ppx_cache/: graphql_schema.json.hash  graphql_schema.json.marshaled
brendancreates-wasm/: Cargo.toml
lib/es6/src/: Apollo.js  App.js  Home.js  PageNotFound.js  index.js
lib/es6/src/components/: Layout.js
lib/es6/src/pages/: About.js  Home.js  Writing.js
public/: index.css  index.html  map.js
public/shaders/: test.glsl
src/: Apollo.res  App.res  Context.res  Emotion.res  Home.res  index.res
src/GrapQL/: Queries.res
src/components/: Layout.res
src/components/Footer/: Footer.res  FooterStyles.res
src/components/Layout/: Layout.res  LayoutStyles.res
src/components/List/: ListStyles.res  Listing.res
src/components/Navbar/: Navbar.res  NavbarStyles.res  NavbarSwitcher.res
src/components/Navbar/MobileNav/: MobileMenu.res  MobileNav.res  MobileNavStyles.res
src/components/PageRecord/: PageRecord.res  PageRecordStyles.res
src/components/ProjectGrid/: ProjectGrid.res  ProjectGridStyles.res
src/components/Switchback/: Switchback.res
src/components/ThreeJS/: StylesThreeCanvas.res  TestingThree.ts  ThreeBgCanvas.ts  ThreeCanvas.res  ThreeRenderer.ts  testing_three.js  testing_three.js.map
src/glsl/: dist.frag  dist.vert  fragment.glsl  irridescence.frag  irridescence.vert  test.glsl
src/pages/: About.res  Blog.res  Home.res  PageNotFound.res  Projects.res  Writing.res
src/templates/: BlogTemplate.res  ProjectTemplate.res  datorender.js
src/utils/: Arrow.res  Breakpoints.res  BuildUrl.res  ChangeUrl.res  DatoDast.ts  DatoImage.res  DatoParser.res  Env.res  FilterOption.res  Icons.res  WasmLoader.res  WebApi.res  WebBindings.res  wasm_loader.ts
wasm/: build_wasm.sh
wasm-rs/: Cargo.toml
wasm-rs/src/: canvas.rs  main.rs
wasm/out-wasm/: brendancreates-wasm.js
wasm/shaders/: fresnel.wgsl  fresnel_frag.glsl  fresnel_mat.frag
wasm/src/: main.rs
website-wasm/: Cargo.toml  LICENSE_MIT  build_wasm.sh  setup-wasm.sh
website-wasm/src/: lib.rs  main.rs
website-wasm/wasm/: index.html
(+10 files in other folders)
