[package]
name = "wasm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.0"
raw-window-handle = "0.5.0"
wasm-bindgen = "0.2.82"
web-sys = { version = "0.3.59", features = [
    "Document",
    "Window",
    "HtmlCanvasElement",
    "HtmlDocument",
] }
